--- a/password_generator-project/generator/templates/generator/password.html
+++ b/password_generator-project/generator/templates/generator/password.html
@@ -1,4 +1,7 @@
-<h1>Your password is: </h1>
-<h2>{{ password }}</h2>
-<h3>Press F5 or refresh the page to generate a new password</h3>
-<a href="{% url 'home' %}">Click here to go back home</a>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<div class="container text-center">
+  <h1>Your password is: </h1>
+  <h2 class="alert alert-dark">{{ password }}</h2>
+  <h3>Press F5 or refresh the page to generate a new password</h3>
+  <a href="{% url 'home' %}" class="btn btn-dark">Click here to go back home</a>
+</div>
